# web-y-tracking-supabase-jorge

./: .djlintrc  .dockerignore  .env.production  .eslintrc.json  .gitignore  .gitlab-ci.yml  .pyre_configuration  .stylelintignore  .stylelintrc.json  .vercelignore  AGENTS.md  AI_CONTEXT.md  ANTIGRAVITY_EXTENSION_COMPLETE.md  API_ARCHITECTURE_AUDIT.md  API_ARCHITECTURE_DIAGRAM.md  APP_ARCHITECTURE_AUDIT.md  Dockerfile  ENGINEERING_LOG.md  MANIFEST.yaml  META_CONTEXT.json  MIGRATION_COMPLETE.md  PageSpeed Insights.md  README.md  REFACTOR_SUMMARY.md  antigravity.py  arreglar.md  audit_tracking.py  capi_retry_queue.json  check_db.py  check_imports.py  check_zaraz_global.py  code.md  codex.md  cspell.json  debug_headers.txt  debug_response.json  debug_response_2.json  docker-compose.yml  eslint.config.mjs  fix_cloudflare_token.py  (+65 more)
.Jules/: palette.md
.agent/: warden_tickets.json
.ai/: AGENTS.md  ARCHITECTURE_AUDIT_NEXUS7.md  ARCHITECTURE_HIVE_NEURAL.md  ARCHITECTURE_OS.md  DIRECTIVES.md  IMPLEMENTATION_SUMMARY.md  SYSTEM.md  architecture_graph.json  nexus.py  policy_zero_intervention.md  run_vision.py  supervisor.py  synapse.py  todo_dnssec.txt
.kimi/: README.md  agent-max.toml  config.toml  mcp.json  prompts.md
.quarantine/: LATEST_RUN  purge_manifest_20260224_013701.yaml
.system_generated/: bandit_report.txt  test_report.json
.trunk/: trunk.yaml
ai/: README.md
api/: index.py
app/: __init__.py  cache.py  celery_app.py  config.py  database.py  database_refactor.py  diagnostics.py  limiter.py  maintenance.py  meta_capi.py  models.py  retry_queue.py  rudderstack.py  services.py  sql_queries.py  tasks.py  tracking.py  version.py
database/: local.db
docs/: ATOMIC_COMPONENTS.md  META_CONTEXT.json
migrations/: env.py
refactor_backup/: api_index.py  app_config.py  app_database.py  app_tracking.py  main.py
requirements/: 00-core.txt  01-persistence.txt  02-tracking.txt  03-platform.txt  04-identity.txt  05-stability.txt  dev.txt
scripts/: audit_assets.py  audit_css_classes.py  audit_deps.py  audit_html_semantic.py  audit_vercel_latest.py  check_deploy.py  check_zaraz_global.py  codex  codex_mcp_servers.example.json  codex_prompt_max.txt  create_new_token.py  deploy_god_mode_token.py  enrich_cms_data.py  external_fallback.py  fix_cloudflare_token.py  gemini  gemini_mcp_servers.json  generate_manifest.py  generate_meta_context.py  get_token_details.py  git_sync.py  heartbeat_monitor.py  kimi  list_permissions.py  list_tokens.py  marketing_audit.py  mcp_server.py  minimal_fix_token.py  neuro_architect.py  professional_audit.sh  requirements.txt  setup_zaraz.py  start_codex_max.ps1  start_gemini_max.ps1  test_all_credentials.py  test_integration.py  test_new_token.py  test_redis_conn.py  test_runner.py  test_tinybird.py  (+10 more)
static/: .gitignore  INDEX.md  MIGRATION_GUIDE.md  README.md  package.json  rollup.config.js
static_new/: INDEX.md  README.md  package.json  postcss.config.js  tailwind.config.js
templates/: index.html
tests/: .coveragerc  COMPLETE_TESTING_STRATEGY.md  README.md  REFACTORING_REPORT.md  __init__.py  anti_crash_test.py  conftest.py  pytest.ini  test_admin.py  test_architecture_audit.py  test_async_tracking.py  test_diamond_protocol.py  test_infrastructure.py  test_performance.py  (+6 more)
(+687 files in other folders)
