[project]
name = "web-y-tracking-supabase-jorge"
version = "0.1.0"
description = "Anti-Gravity Tracking Core for Jorge Aguirre Flores Web"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.7",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "beartype>=0.18.5",
    "orjson>=3.9.15",
    "itsdangerous>=2.1.2",
    "starlette>=0.50.0",
    "supabase>=2.3.0",
    "gotrue>=2.3.0",
    "postgrest>=2.27.3",
    "storage3>=2.27.3",
    "redis>=5.0.1",
    "upstash-redis>=1.0.0",
    "SQLAlchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.3",
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
