[project]
name = "web-y-tracking-supabase-jorge"
version = "0.1.0"
description = "Anti-Gravity Tracking Core for Jorge Aguirre Flores Web"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "supabase>=2.3.0",
    "upstash-redis>=1.0.0",
    "tenacity>=8.2.3",
    "locust>=2.23.1"
]
